Ensure proper alignment on the menu food card

--- a/src/styles/assets/menu.css
+++ b/src/styles/assets/menu.css
@@ -32,7 +32,13 @@
 
 .food_card > div > h2,
 .food_card > div > p {
-    max-width: 15ch;
+    max-width: 20ch;
+    text-align: center;
+}
+.food_card > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .food_picture {
